# school-schedule-cli

./: Cargo.toml  README.md  config.toml
src/: main.rs  print_data.rs
src/config/: mod.rs  structs.rs
