[package]
name = "school-schedule-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.10"
serde = {version = "1.0.196", features = ["derive"]}
xdg = "2.5.2"
chrono = "0.4.31"
pico-args = "0.5.0"

